tests/fail/open__builtins__--AttributeError.py
"""'open' should not be in __builtins__."""
__builtins__.open
